--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,23 @@
   </head>
 
   <body>
+    <%# Navbar %>
+    <%= render 'shared/navbar' %>
+    
+    <%# Alert/Notice %>
+    <div class="mx-5 my-2">
+    <% if notice %>
+      <p class="notice alert alert-success">
+        <%= flash.now[:notice] %>
+      </p>
+    <% end %>
+    <% if alert %>
+      <p class="notice alert alert-success">
+        <%= flash.now[:alert] %>
+      </p>
+    <% end %>
+  </div>
+
     <%= yield %>
   </body>
 </html>
