--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,37 +1,5 @@
 <div class="container">
   <h1>Appointmnets</h1>
 </div>
+  <%= render 'appointments/index_table', q: @q, pagy: @pagy, appointments: @appointments %>
 
-<div class="container">
-  <div class="my-5">
-    <table class="table table-sm table-hover">
-      <thead>
-        <tr>
-          <th scope="col"><%= sort_link(@q, :doctor_id) %></th>
-          <th scope="col"><%= sort_link(@q, :patient_id) %></th>
-          <th scope="col">Date</th>
-          <th scope="col">Time</th>
-          <th scope="col">Cost</th>
-          <th scope="col">Currency</th>
-          <th scope="col">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @appointments.each do |appointment| %>
-          <tr>
-            <td><%= appointment.doctor.full_name %></td>
-            <td><%= appointment.patient.full_name %></td>
-            <td><%= appointment.start_time.strftime("%d %B, %Y") %></td>
-            <td><%= appointment.start_time.strftime("%k:%M") %></td>
-            <td><%= appointment.cost %></td>
-            <td><%= appointment.currency %></td>
-            <td><button type="button" class="btn btn-light btn-sm">Placeholder</button></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-  <div id="pagination" class="pag-bar">
-    <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
-  </div>
-</div>
