--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,10 @@
-<nav class="navbar navbar-light bg-light">
-  <div class="container">
-    <div class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></div>
-    <div class="nav-item"><%= link_to "Patients", patients_path, class: "nav-link" %></div>
-    <div class="nav-item"><%= link_to "Statistics", birth_date_statistics_patients_path, class: "nav-link" %></div>
-    <div class="nav-item"><%= link_to "Appointments", appointments_path, class: "nav-link" %></div>
-  </div>
-</nav>
+<div class="container my-4">
+  <nav class="navbar navbar-light bg-light">
+    <div class="container">
+      <div class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></div>
+      <div class="nav-item"><%= link_to "Patients", patients_path, class: "nav-link" %></div>
+      <div class="nav-item"><%= link_to "Statistics", birth_date_statistics_patients_path, class: "nav-link" %></div>
+      <div class="nav-item"><%= link_to "Appointments", appointments_path, class: "nav-link" %></div>
+    </div>
+  </nav>
+</div>
