Add appointment model scope: Update tests; Update views

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <h1>Appointmnets</h1>
 </div>
-  <%= render 'appointments/index_table', q: @q, pagy: @pagy, appointments: @appointments %>
+  <%= render 'appointments/index_table', q: @q, pagy: @pagy, appointments: @appointments, incoming: @incoming %>
 
