--- a/app/views/appointments/_index_table.html.erb
+++ b/app/views/appointments/_index_table.html.erb
@@ -21,7 +21,9 @@
             <td><%= appointment.start_time.in_time_zone("Europe/Warsaw").strftime("%k:%M") %></td>
             <td><%= appointment.cost %></td>
             <td><%= appointment.currency %></td>
-            <td><%= link_to 'Delete', appointment_path(appointment), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %></td>
+            <% if appointment.in?(incoming) %>
+              <td><%= link_to 'Delete', appointment_path(appointment), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %></td>
+            <% end %>
           </tr>
         <% end %>
       </tbody>
