[MSA-9] Tests and Fixes (#9)
* Add patients services tests; Add pesel validator

* Add validator for appointment start_time; Add tests for validator and appointment model

* Add tests for appointments services

* Add controller tests

* Add appointment model scope: Update tests; Update views

--- a/app/views/appointments/_index_table.html.erb
+++ b/app/views/appointments/_index_table.html.erb
@@ -17,11 +17,13 @@
           <tr>
             <td><%= appointment.doctor.full_name %></td>
             <td><%= appointment.patient.full_name %></td>
-            <td><%= appointment.start_time.strftime("%d %B, %Y") %></td>
-            <td><%= appointment.start_time.strftime("%k:%M") %></td>
+            <td><%= appointment.start_time.in_time_zone("Europe/Warsaw").strftime("%d %B, %Y") %></td>
+            <td><%= appointment.start_time.in_time_zone("Europe/Warsaw").strftime("%k:%M") %></td>
             <td><%= appointment.cost %></td>
             <td><%= appointment.currency %></td>
-            <td><%= link_to 'Delete', appointment_path(appointment), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %></td>
+            <% if appointment.in?(incoming) %>
+              <td><%= link_to 'Delete', appointment_path(appointment), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %></td>
+            <% end %>
           </tr>
         <% end %>
       </tbody>
