--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <h1>Appointmnets</h1>
-</div>
+  <div class="m-2">
+    <h4>Appointmnets</h4>
+  </div>
   <%= render 'appointments/index_table', q: @q, pagy: @pagy, appointments: @appointments, incoming: @incoming %>
-
+</div>
