--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,10 @@
-<div class="container my-4">
-  <nav class="navbar navbar-light bg-light">
-    <div class="container">
-      <div class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></div>
-      <div class="nav-item"><%= link_to "Patients", patients_path, class: "nav-link" %></div>
-      <div class="nav-item"><%= link_to "Statistics", birth_date_statistics_patients_path, class: "nav-link" %></div>
-      <div class="nav-item"><%= link_to "Appointments", appointments_path, class: "nav-link" %></div>
+<div class="container">
+  <nav class="navbar navbar-light bg-light navbar-expand-lg">
+    <div class="container-fluid justify-content-start">
+      <div class="btn btn-light me-2"><%= link_to "Home", root_path, class: "nav-link" %></div>
+      <div class="btn btn-light me-2"><%= link_to "Patients", patients_path, class: "nav-link" %></div>
+      <div class="btn btn-light me-2"><%= link_to "Statistics", birth_date_statistics_patients_path, class: "nav-link" %></div>
+      <div class="btn btn-light me-2"><%= link_to "Appointments", appointments_path, class: "nav-link" %></div>
     </div>
   </nav>
 </div>
