--- a/app/views/appointments/_index_table.html.erb
+++ b/app/views/appointments/_index_table.html.erb
@@ -5,7 +5,7 @@
         <tr>
           <th scope="col"><%= sort_link(q, :doctor_id) %></th>
           <th scope="col"><%= sort_link(q, :patient_id) %></th>
-          <th scope="col">Date</th>
+          <th scope="col"><%= sort_link(q, :start_time, "Date") %></th>
           <th scope="col">Time</th>
           <th scope="col">Cost</th>
           <th scope="col">Currency</th>
@@ -16,7 +16,13 @@
         <% appointments.each do |appointment| %>
           <tr>
             <td><%= appointment.doctor.full_name %></td>
-            <td><%= appointment.patient.full_name %></td>
+            <td>
+              <% if request.path == "/appointments" %>
+                <%= link_to appointment.patient.full_name, appointments_patient_path(appointment.patient) %>
+              <%else%>
+                <%= appointment.patient.full_name %>
+              <% end %>
+            </td>
             <td><%= appointment.start_time.in_time_zone("Europe/Warsaw").strftime("%d %B, %Y") %></td>
             <td><%= appointment.start_time.in_time_zone("Europe/Warsaw").strftime("%k:%M") %></td>
             <td><%= appointment.cost %></td>
