--- a/app/views/patients/birth_date_statistics.html.erb
+++ b/app/views/patients/birth_date_statistics.html.erb
@@ -1,3 +1,8 @@
 <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+<div class="container">
+  <div class="m-2">
+    <h4>Patients birth year statistics</h4>
+  </div>
+  <%= column_chart @birth_date_statistics, height: "500px", ytitle: "Number of Patients", xtitle: "Birth Year" %>
+</div>
 
-<%= column_chart @birth_date_statistics, height: "500px", ytitle: "Number of Patients", xtitle: "Birth Year" %>
